content/boundary/v0.13.x/content/docs/commands/host-sets/list.mdx
---
layout: docs
page_title: host-sets list - Command
description: |-
  The "host-sets list" command lists the host sets within a given scope or resource.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-10-29T10:56:20-04:00
last_modified: 2025-10-29T10:56:20-04:00
# END AUTO GENERATED METADATA
---

# host-sets list

Command: `boundary host-sets list`

The `boundary host-sets list` command lets you list the Boundary host sets within a given scope or resource.

## Example

This example lists all host sets within the host catalog `_1234567890`:

```shell-session
$ boundary host-sets list -host-catalog-id _1234567890
```

## Usage

<CodeBlockConfig hideClipboard>

```shell-session
$ boundary host-sets list [options] [args]
```

</CodeBlockConfig>

### Command options

- `-filter=<string>` - If set, Boundary filters the list operation before the results are returned.
The filter operates against each item in the list.
We recommend that you use single quotes, because the filters contain double quotes.
Refer to the [Filter resource listings documentation](/boundary/docs/concepts/filtering/resource-listing) for more details.
- `-host-catalog-id=<string>` - The host catalog resource to use to produce the list.
You can also specify the host catalog using the **BOUNDARY_HOST_CATALOG_ID** environment variable.

@include 'cmd-option-note.mdx'